Fixed low contrast color of the footer.

--- a/styles.css
+++ b/styles.css
@@ -116,7 +116,7 @@ footer {
 
 footer a {
   text-decoration: none;
-  color: #2a75bb;
+  color: #1D5586;
 }
 
 footer small {
